# pyqt-excel

./: README.md  document.py  form.ui  info.txt  logica.py  main.py  pyproject.toml  requirements.txt  ui_form.py
